# sbl-optimizer

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
sbl_optimizer/: config.json  config.md  config.py  heat_solver.py  io.py  main.py  utils.py
sbl_optimizer/assets/: config.json  config.md
