[project]
name = "sbl-optimizer"
version = "0.1.0"
description = "Thermal swell pattern optimizer"
authors = [
  { name = "Sosuke Ichihashi", email = "pengu1n.i843@gmail.com" }
]
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = "MIT"

dependencies = [
  "numpy >=1.24, <2.3",
  "pillow >=9.5, <12.0",
  "matplotlib >=3.7, <3.11"
]

[project.urls]
"Homepage" = "https://sites.gatech.edu/futurefeelings/2025/03/07/swell-by-light-tei-25/"
"Paper" = "https://dl.acm.org/doi/10.1145/3689050.3704420"
"Repository" = "https://github.com/sosucat/sbl-optimizer"

[tool.setuptools]
license-files = ["LICENSE"]
[tool.setuptools.packages.find]
where = ["sbl_optimizer"]

[build-system]
requires = ["setuptools >=61", "wheel"]
build-backend = "setuptools.build_meta"
